total sum functionality

--- a/src/Routes.scss
+++ b/src/Routes.scss
@@ -3,7 +3,9 @@
 './sass/mixins',
 './sass/functions';
 @import
-'./sass/imggallery',
+'./sass/takeawaymenu',
 './sass/footer',
-'./sass/card',
+'./sass/header',
+'./sass/nav',
+'./sass/takeawaymenucard',
 './sass/custom';
