--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -29,11 +29,9 @@ $white: #fff;
 $black: #000;
 $grey : #999;
 
-$cinnamon: #b8735b;
-$darkwood: #362b2c;
-$ivory: #eae1cf;
-$brightorange: #fdab00;
-$warmred: #cd3e36;
+$primary: #fff;
+$secondary: #000;
+$accent: #cd3e36;
 
 $color--base: rgba(65, 177, 130, 0.877);
 $color-base--dark: darken($color--base, 25%);
