--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -2,6 +2,7 @@
     background-color: $secondary;
     position: relative;
     padding: $global-padding;
+
     .hamburgerToggle {
         z-index: 20;
         left: 1rem;
@@ -10,6 +11,7 @@
         position: absolute;
         @include flexy($dir: column);
         cursor: pointer;
+
         span {
             width: 1rem;
             border-bottom: .2rem solid $accent;
@@ -17,33 +19,75 @@
             padding: .1rem;
         }
     }
+
     .nav-links {
-        left: 30px;
+        left: -16px;
         top: 0;
         height: 100vh;
         width: 30vw;
         background-color: $secondary;
         position: absolute;
-        @include flexy($just: center, 
-        $dir: column,
-        $aligni: center);
+        @include flexy($just: center,
+            $dir: column,
+            $aligni: center);
         padding: $global-padding;
         z-index: 1;
-        // transform: translateX(-500px);
+
         .nav-link {
             width: 7rem;
             background-color: $accent;
-            margin: $global-margin; 
+            margin: $global-margin;
             padding: $global-padding;
             border-radius: $global-border-radius;
             text-align: center;
         }
     }
+
     .basket-icon {
         @include flexy($just: flex-end)
     }
+
     a {
         color: $primary;
         text-decoration: none;
+    }
+}
+
+.initialClose {
+    transform: translateX(-500px);
+}
+
+.close {
+    animation: slideOut 400ms ease forwards;
+}
+
+.open {
+    animation: slideIn 400ms ease forwards;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(-500px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideOut {
+    0% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        transform: translateX(-500px);
+        opacity: 0;
     }
 }
