--- a/src/Routes.css
+++ b/src/Routes.css
@@ -1,1 +1,215 @@
-/* No CSS *//*# sourceMappingURL=Routes.css.map */
+.basket_item_card {
+  margin: 1rem;
+}
+
+.basket_item_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.basktet_item_container {
+  font-size: 1.1rem;
+}
+
+.basket_button_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.basket_button_container .basket_qty_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.basket_button_container .btn_delete {
+  border: none;
+  outline: none;
+  background-color: white;
+  color: #cd3e36;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.basket_button_container .btn_decrease {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  border: none;
+  outline: none;
+  background-color: #fff;
+}
+
+.basket_button_container .btn_increase {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  border: none;
+  outline: none;
+  background-color: #fff;
+}
+
+.basket_container {
+  margin: 1rem;
+  max-width: 380px;
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0px 0px 0px 1px #c5bebe inset;
+          box-shadow: 0px 0px 0px 1px #c5bebe inset;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.basket_header {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.basket_header .arrow {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.empty_basket_container {
+  margin: 1rem;
+}
+
+.empty_basket_container h2 {
+  text-align: center;
+}
+
+.empty_basket_container p {
+  text-align: center;
+}
+
+.empty_basket_container .img_container {
+  text-align: center;
+}
+
+.empty_basket_container .img_container img {
+  width: 200px;
+  height: auto;
+}
+
+.basket_item_container {
+  font-size: 1.1rem;
+}
+
+.btn_goback_container {
+  text-align: center;
+}
+
+.btn_goback {
+  background-color: #cd3e36;
+  color: #fff;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 300px;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0px 0px 0px 1px #ef9191 inset;
+          box-shadow: 0px 0px 0px 1px #ef9191 inset;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn_goback:hover {
+  text-decoration: none;
+  border: 4px solid #ef9191;
+  -webkit-box-shadow: 0px 0px 0px 4px #eee inset;
+          box-shadow: 0px 0px 0px 4px #eee inset;
+  background-color: #cd3e36;
+}
+
+.icon {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+.basket_total_container {
+  margin: 1rem;
+  font-size: 1.1rem;
+}
+
+.total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btn_order_container {
+  text-align: center;
+}
+
+.btn_order {
+  background-color: #cd3e36;
+  color: #fff;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 300px;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0px 0px 0px 1px #f3eeee inset;
+          box-shadow: 0px 0px 0px 1px #f3eeee inset;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn_order:hover {
+  text-decoration: none;
+  border: 4px solid #df9595;
+  -webkit-box-shadow: 0px 0px 0px 4px #eee inset;
+          box-shadow: 0px 0px 0px 4px #eee inset;
+  background-color: #cd3e36;
+}
+/*# sourceMappingURL=Routes.css.map */
