signIn is added

--- a/src/Routes.scss
+++ b/src/Routes.scss
@@ -1,25 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
 @import "./sass/globals", "./sass/mixins", "./sass/functions";
 @import "./sass/takeawaymenu", "./sass/footer", "./sass/header", "./sass/nav",
-  "./sass/takeawaymenucard", "./sass/form";
-=======
-=======
-
->>>>>>> 3c085512a9ae37bcea5aa4d7d67901f21961f5d4
-@import 
-'./sass/globals',
-'./sass/mixins',
-'./sass/functions';
-@import
-'./sass/takeawaymenu',
-'./sass/footer',
-'./sass/header',
-'./sass/nav',
-<<<<<<< HEAD
-'./sass/takeawaymenucard';
->>>>>>> main
-=======
-'./sass/takeawaymenucard',
-  "./sass/form";
->>>>>>> 3c085512a9ae37bcea5aa4d7d67901f21961f5d4
+  "./sass/takeawaymenucard", "./sass/form", "./sass/signIn";
