--- a/src/Routes.css
+++ b/src/Routes.css
@@ -1,3 +1,28 @@
+.takeawaymenu_container {
+  max-width: 1500px;
+  margin: 0 auto;
+  margin-top: 50px;
+  height: 75px;
+  line-height: 75px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (minmax(280px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-gap: 20px;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin: 3rem;
+}
+
+.takeawaymenu_container img {
+  height: 200px;
+  width: 190px;
+}
+
 .nav {
   background-color: #000;
   position: relative;
@@ -184,6 +209,33 @@
             transform: translateX(-500px);
     opacity: 0;
   }
+}
+
+.menu_card button {
+  background-color: #cd3e36;
+  color: #fff;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 45px;
+  max-width: 300px;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+  border: 4px solid #fff;
+  -webkit-box-shadow: 0px 0px 0px 1px #ef9191 inset;
+          box-shadow: 0px 0px 0px 1px #ef9191 inset;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.menu_card button:hover {
+  text-decoration: none;
+  border: 4px solid #ef9191;
+  -webkit-box-shadow: 0px 0px 0px 4px #eee inset;
+          box-shadow: 0px 0px 0px 4px #eee inset;
+  background-color: #cd3e36;
 }
 
 @media (min-width: 768px) {
@@ -618,5 +670,30 @@ h3 {
       -ms-flex-align: stretch;
           align-items: stretch;
   margin: 3rem;
+}
+
+.takeawaymenu_container {
+  max-width: 1500px;
+  margin: 0 auto;
+  margin-top: 50px;
+  height: 75px;
+  line-height: 75px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: (minmax(280px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-gap: 20px;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  margin: 3rem;
+}
+
+.takeawaymenu_container img {
+  height: 200px;
+  width: 190px;
 }
 /*# sourceMappingURL=Routes.css.map */
