--- a/src/Routes.scss
+++ b/src/Routes.scss
@@ -1,4 +1,4 @@
 @import './sass/globals', './sass/mixins', './sass/functions';
 @import './sass/takeawaymenu', './sass/footer', './sass/header', './sass/nav',
   './sass/takeawaymenucard', './sass/form', './sass/basketitem', './sass/basket',
-  './sass/home';
+  './sass/home', './sass/contact', './sass/signIn';
