still working on responsive

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -15,6 +15,7 @@
   width: 100%;
   height: 400px;
   background-size: cover;
+  background-repeat: no-repeat;
   h1 {
     color: $primary;
     font-size: 4rem;
@@ -39,7 +40,7 @@
   .menu_card_container {
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 20px;
     align-items: stretch;
     .menu_card {
@@ -78,6 +79,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   h1 {
     color: $primary;
     font-size: 4rem;
@@ -87,7 +90,16 @@
 .location_card_container {
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
+  .loaction_card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid $secondary;
+    padding: 1rem;
+    margin: 1rem;
+  }
 }
