--- a/src/sass/_takeawaymenu.scss
+++ b/src/sass/_takeawaymenu.scss
@@ -6,7 +6,8 @@
   line-height: 75px;
   display: grid;
   align-items: center;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
   margin: 3rem;
