--- a/src/Routes.css
+++ b/src/Routes.css
@@ -1,3 +1,61 @@
+footer {
+  background-color: black;
+  color: white;
+  height: 40vh;
+}
+
+footer .locations {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .locations div {
+  text-align: center;
+}
+
+footer .locations a {
+  color: white;
+}
+
+footer .icons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+footer .icons .icon {
+  padding: 5px;
+}
+
+footer .reserved {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  bottom: auto;
+}
+
 .nav {
   background-color: #000;
   position: relative;
