--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -1,11 +1,11 @@
 .contactForm {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // min-height: 100vh;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
   h3 {
-    border-bottom: 2px solid black;
+    text-decoration: underline;
   }
 
   label {
@@ -15,7 +15,7 @@
     border-radius: 5px;
     background-color: $primary;
     padding: 10px;
-    width: 100%;
+    // width: 100%;
   }
 
   input {
@@ -32,15 +32,19 @@
     height: 100px;
   }
 
-  button {
-    width: 100%;
-    background-color: $accent;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  .buttonContainer {
+    padding: 10px;
+
+    button {
+      width: 100%;
+      background-color: $accent;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
   }
 
   @include breakpoint(medium) {
