--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,17 +1,28 @@
 footer {
   background-color: black;
   color: white;
-  height: 40vh;
+  height: 80vh;
+  @include breakpoint(medium) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-around;
+  }
 
   .locations {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    div {
-      text-align: center;
+    @include breakpoint(medium) {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
     }
     a {
       color: white;
+      text-decoration: none;
     }
   }
 
@@ -24,6 +35,9 @@ footer {
     margin-bottom: 20px;
     .icon {
       padding: 5px;
+    }
+    @include breakpoint(medium) {
+      margin-top: 120px;
     }
   }
 
