--- a/src/sass/_signIn.scss
+++ b/src/sass/_signIn.scss
@@ -1,18 +1,17 @@
 .signIn {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  //   min-height: 100vh;
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: center;
   div {
     border-radius: 5px;
     background-color: $primary;
     padding: 10px;
-    width: 100%;
   }
 
   h3 {
-    border-bottom: 2px solid black;
+    text-decoration: underline;
   }
 
   label {
@@ -29,15 +28,19 @@
     box-sizing: border-box;
   }
 
-  button {
-    width: 100%;
-    background-color: $accent;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  .buttonContainer {
+    padding: 10px;
+
+    button {
+      width: 100%;
+      background-color: $accent;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
   }
 
   @include breakpoint(medium) {
