--- a/src/Routes.css
+++ b/src/Routes.css
@@ -301,7 +301,19 @@
           align-items: center;
 }
 
-.menu_card button {
+.menu_card .content_wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu_card .content_wrap button {
   background-color: #cd3e36;
   color: #fff;
   letter-spacing: 0.1em;
@@ -320,7 +332,7 @@
   transition: all 0.3s ease-in-out;
 }
 
-.menu_card button:hover {
+.menu_card .content_wrap button:hover {
   text-decoration: none;
   border: 4px solid #ef9191;
   -webkit-box-shadow: 0px 0px 0px 4px #eee inset;
@@ -751,6 +763,7 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 2rem;
 }
 
 .menu .menu_card_container {
