--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -55,7 +55,6 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   width: 100%;
   height: 700px;
   background-position: center;
@@ -92,6 +91,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 2rem;
   .menu_card_container {
     display: grid;
     align-items: center;
