--- a/src/sass/_takeawaymenucard.scss
+++ b/src/sass/_takeawaymenucard.scss
@@ -7,26 +7,31 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  button {
-    background-color: $accent;
-    color: $primary;
-    letter-spacing: 0.1em;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 45px;
-    max-width: 300px;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 100%;
-    border: 4px solid $primary;
-    box-shadow: 0px 0px 0px 1px #ef9191 inset;
-    transition: all 0.3s ease-in-out;
-    &:hover {
-      text-decoration: none;
-      border: 4px solid #ef9191;
-      box-shadow: 0px 0px 0px 4px #eee inset;
+  .content_wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    button {
       background-color: $accent;
+      color: $primary;
+      letter-spacing: 0.1em;
+      cursor: pointer;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 45px;
+      max-width: 300px;
+      text-decoration: none;
+      text-transform: uppercase;
+      width: 100%;
+      border: 4px solid $primary;
+      box-shadow: 0px 0px 0px 1px #ef9191 inset;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        text-decoration: none;
+        border: 4px solid #ef9191;
+        box-shadow: 0px 0px 0px 4px #eee inset;
+        background-color: $accent;
+      }
     }
   }
 }
