--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -7,13 +7,13 @@ a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   width: 100%;
-  height: 700px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: -1;
   .heroContents {
     padding-top: 25px;
     text-align: center;
