--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,3 +1,8 @@
+.fixed {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+}
 .nav {
     background-color: $secondary;
     position: relative;
@@ -38,7 +43,7 @@
             $dir: column,
             $aligni: center);
         padding: $global-padding;
-        z-index: 1;
+        z-index: 2;
 
         @include breakpoint(medium) {
             position: static;
