--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,6 +1,9 @@
 .main {
     margin-top: 3.3rem;
     @include breakpoint(medium) {
-        margin-top: 4.5;
+        margin-top: 3.9rem;
     }
+    // @include breakpoint(large) {
+    //     margin-top: 5rem;
+    // }
 }
