--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -1,28 +1,28 @@
 .fixed {
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 .nav {
     background-color: $secondary;
-    position: relative;
     padding: $global-padding;
-    z-index: 2000;
-
+    @include flexy($aligni: center);
+    
     @include breakpoint(medium) {
+        position: relative;
         @include flexy($aligni: center);
         height: 4vh;
     }
 
     .hamburgerToggle {
+        flex: 1;
         width: 1.2rem;
         padding: .3rem;
         z-index: 20;
-        left: .6rem;
-        right: 0;
-        top: .6rem;
         position: absolute;
+        left: 1rem;
+        top: 1.5rem;
         @include flexy($dir: column);
         cursor: pointer;
 
@@ -79,36 +79,48 @@
     }
 
     .logo {
-        @include flexy($just: center, $aligni: center);
-        position: absolute;
-        top: .1rem;
-        left: 44%;
-        margin: 0;
-        width: 3rem;
+        width: 100%;
+        position: relative;
+        @include flexy($just: center, $aligni: center, );
 
         img {
-            width: 100%;
+            width: 3rem;
+            @include breakpoint(medium) {
+                left: 0;
+                z-index: 2;
+                width: 6rem;
+            }
         }
-
         @include breakpoint(medium) {
-            top: .2rem;
+            position: absolute;
             left: 2rem;
             z-index: 2;
             width: 6rem;
         }
+
     }
 
     .basket-icon {
-        @include flexy($just: flex-end, $aligni: center);
+        width: 100%;
+        height: 3rem;
+        position: absolute;
+        right: 1rem;
+        @include flexy( $just: flex-end, $aligni: center);
+        @include breakpoint(medium) {
+            width: 9rem;
+            position: static;
+            height: 2rem;
+        }
 
         .nav-link {
+            // width: 100%;
             @include breakpoint(medium) {
                 text-align: center;
-                width: 6rem;
+                // width: 6rem;
             }
 
             a {
-                width: 4rem;
+                width: 6rem;
                 padding: $global-padding;
             }
         }
